Overhaul the modification matching and file generation for Skyline.
Fixed several bugs and make it a little easier to maintain.